--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -60,6 +60,9 @@ html {
 .text-const {
     color: $const !important;
 }
+.text-classes {
+    color: $classes !important;
+}
 .text-black {
     color: $background !important;
 }
