--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -10,6 +10,7 @@
             position: relative;
             width: calc(33.3% - 10px);
             cursor: pointer;
+            margin-bottom: 10px;
             .project-name {
                 left: 50%;
                 top: 50%;
