--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -8,9 +8,12 @@
         justify-content: space-between;
         .project-card {
             position: relative;
-            width: calc(33.3% - 10px);
             cursor: pointer;
+            width: 100%;
             margin-bottom: 10px;
+            @media only screen and (min-width: 1000px) {
+                width: calc(33.3% - 10px);
+            }
             .project-name {
                 left: 50%;
                 top: 50%;
