--- a/src/Components/Intro/Intro.scss
+++ b/src/Components/Intro/Intro.scss
@@ -40,9 +40,11 @@
             line-height: 18px;
         }
         > p {
+            white-space: pre;
             animation: text-blink 0.01s steps(2) infinite;
             color: $foreground;
             text-shadow: 0 0 5px #5f5566;
+            max-width: 100%;
             @media only screen and (max-width: 600px) {
                 line-height: 14px;
                 font-size: 10px;
@@ -55,11 +57,41 @@
                     font-size: 10px;
                 }
                 @media only screen and (max-width: 992px) {
-                    line-height: 6px;
-                    font-size: 6px;
+                    line-height: 7px;
+                    font-size: 7px;
                 }
                 @media only screen and (max-width: 768px) {
                     line-height: 6px;
+                    font-size: 6px;
+                }
+                @media only screen and (max-width: 600px) {
+                    line-height: 5px;
+                    font-size: 5px;
+                }
+                @media only screen and (max-width: 400px) {
+                    line-height: 4px;
+                    font-size: 4px;
+                }
+                @media only screen and (max-width: 300px) {
+                    line-height: 3px;
+                    font-size: 3px;
+                }
+            }
+            &.loading-assets {
+                @media only screen and (max-width: 600px) {
+                    line-height: 11px;
+                    font-size: 9px;
+                }
+                @media only screen and (max-width: 400px) {
+                    line-height: 11px;
+                    font-size: 8px;
+                }
+                @media only screen and (max-width: 350px) {
+                    line-height: 10px;
+                    font-size: 7px;
+                }
+                @media only screen and (max-width: 300px) {
+                    line-height: 9px;
                     font-size: 6px;
                 }
             }
