GlitchedDate, moved striage from intro to fixed through the whole page, changed background, made percentage wheel smaller, adjusted z-index to account for striage

--- a/src/Components/AboutMe/AboutMe.scss
+++ b/src/Components/AboutMe/AboutMe.scss
@@ -22,6 +22,8 @@
         }
         > .gatsby-image-wrapper {
             max-width: 100%;
+            position: relative;
+            z-index: 1;
         }
     }
 }
