--- a/src/Components/Intro/Intro.scss
+++ b/src/Components/Intro/Intro.scss
@@ -1,9 +1,6 @@
 @import '../../scss-exports/dimensions';
 @import '../../scss-exports/colors';
 
-#intro-element {
-    background: linear-gradient(0deg, $background, #000000)
-}
 #intro {
     > .Typist {
         padding-top: 15px + $header-height;
@@ -14,23 +11,6 @@
         background-repeat: no-repeat;
         background-size: auto;
         min-height: 100vh;
-        &::after {
-            content: "";
-            position: absolute;
-            opacity: 0.3;
-            top: 0;
-            left: 0;
-            min-width: 100%;
-            min-height: 100%;
-            background: repeating-linear-gradient(
-                0deg,
-                rgba(#000000, 1),
-                rgba(#000000, 1) 2px,
-                transparent,
-                transparent 4px
-            );
-            pointer-events: none;
-        }
         > *:last-child::after {
             color: $foreground;
             content: "▮";
@@ -49,7 +29,7 @@
                 line-height: 14px;
                 font-size: 10px;
             }
-            &.crunched {
+            &.name-crunched {
                 line-height: 12px;
                 font-size: 12px;
                 @media only screen and (max-width: 1000px) {
@@ -75,6 +55,34 @@
                 @media only screen and (max-width: 300px) {
                     line-height: 3px;
                     font-size: 3px;
+                }
+            }
+            &.title-crunched {
+                line-height: 10px;
+                font-size: 10px;
+                @media only screen and (max-width: 1000px) {
+                    line-height: 8px;
+                    font-size: 8px;
+                }
+                @media only screen and (max-width: 992px) {
+                    line-height: 6px;
+                    font-size: 6px;
+                }
+                @media only screen and (max-width: 768px) {
+                    line-height: 5px;
+                    font-size: 5px;
+                }
+                @media only screen and (max-width: 600px) {
+                    line-height: 4px;
+                    font-size: 4px;
+                }
+                @media only screen and (max-width: 400px) {
+                    line-height: 3px;
+                    font-size: 3px;
+                }
+                @media only screen and (max-width: 300px) {
+                    line-height: 2px;
+                    font-size: 2px;
                 }
             }
             &.loading-assets {
