--- a/src/Components/Technologies/Technologies.scss
+++ b/src/Components/Technologies/Technologies.scss
@@ -25,6 +25,10 @@ $circle-width-hover: 0.04em;
 $color-hex-primary: #d78521;
 $color-hex-secondary: $foreground;
 
+/* Percentage Wheel */
+
+$percentage-wheel: 80px;
+
 @media only screen and (min-width: 340px) and (max-width: 429px) {
 	#technologies {
 		max-width: 320px;
@@ -52,6 +56,8 @@ $color-hex-secondary: $foreground;
         text-align: center;
         font-size: 0;
         padding-bottom: 60px;
+        position: relative;
+        z-index: 1;
     }
     .hexagon-tile {
         position: relative;
@@ -60,7 +66,6 @@ $color-hex-secondary: $foreground;
         text-align: center;
         cursor: pointer;
         border-radius: 20%/5%;
-
         &::after,&::before {
             margin: 0;
             padding: 0;
@@ -221,7 +226,7 @@ $color-hex-secondary: $foreground;
                 float: none;
                 margin: 0 auto;
                 position: relative;
-                font-size: 120px;
+                font-size: $percentage-wheel;
                 width: 1em;
                 height: 1em; 
                 background-color: #cccccc;
