manifest + offline plugins, sizes to em, striage only in first component, improved background efficiency by making only top and bottom gradients, playing around with project modals (//edited out) cleaning up styles, logo & favicons in place

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -23,12 +23,10 @@
             }
         }
         .contact-form {
-            position: relative;
             padding: 20px;
             width: calc(50% - 10px);
-            border-radius: .25em;
+            border-radius: .25rem;
             background: $regex-keyword;
-            z-index: 1;
             .error-text {
                 color: $danger;
                 text-align: center;
@@ -109,7 +107,7 @@
                     justify-content: center;
                     background-color: $regex-keyword;
                     border: 2px solid $regex;
-                    border-radius: .25em;
+                    border-radius: .25rem;
                     color: $regex;
                     transition: all .5s ease-in-out;
                     cursor: pointer;
