--- a/src/Components/ErrorBoundary/ErrorBoundary.scss
+++ b/src/Components/ErrorBoundary/ErrorBoundary.scss
@@ -1,6 +1,6 @@
 .error-modal {
     margin: 15px;
-    border-radius: .25em;
+    border-radius: .25rem;
     border: 1px solid #eee;
     padding: 15px;
 }
