--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,18 +7,32 @@ header {
     top: 0;
     height: $header-height;
     background-color: $background;
-    padding: 15px 0;
-    z-index: 3;
+    padding: 0;
+    z-index: 2;
     border-bottom: 1px solid #373737;
-    h6 {
-        color: $variable;
+    .logo {
         cursor: pointer;
+        display: flex;
+        align-items: center;
+        height: 59px;
+        img {
+            height: 59px;
+        }
+        span {
+            margin-left: 20px;
+            color: #e1e1e1;
+            font-size: 1.5rem;
+            @media only screen and (max-width: 1219px) {
+                display: none;
+            }
+        }
     }
     .header-container {
         display: flex;
         justify-content: space-between;
     }
     .nav {
+        padding: 15px 0;
         .scroll-link.active .nav-item {
             &::before {
                 content: "<"
@@ -37,11 +51,12 @@ header {
         }
     }
     .nav-toggle {
+        top: 15px;
         border: 1px solid #e8ebf7;
         background-color: rgba(232, 235, 247,.3);
         width: 50px;
         height: 50px;
-        border-radius: .25em;
+        border-radius: .25rem;
         color: #e8ebf7;
         cursor: pointer;
         position: relative;
@@ -65,8 +80,8 @@ header {
         }
         .buns{
             margin: auto;
-            width: 1.625em;
-            height: 1.625em;
+            width: 1.625rem;
+            height: 1.625rem;
             list-style: none;
             padding: 0;
             position: absolute;
@@ -104,7 +119,6 @@ header {
     }
     .nav-toggle {
         visibility: visible;
-        z-index: 1;
     }
     .nav {
         visibility: hidden;
@@ -139,18 +153,18 @@ header {
             transform: scale(1);
         }
         .nav-item {
-            font-size: 1.25em;
-            padding: 1em 0;
+            font-size: 1.25rem;
+            padding: 1rem 0;
             border-bottom: 1px solid rgba(255, 255, 255, 0.15)
         }
         .nav-item:hover, .nav-item:active{
             -webkit-opacity: 0.45;
             -moz-opacity: 0.45;
             opacity: 0.45;
-            padding: 1em;
+            padding: 1rem;
         }
         .scroll-link.active .nav-item {
-            padding: 1em;
+            padding: 1rem;
         }
     }
 }
