--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -9,27 +9,137 @@
             position: relative;
             cursor: pointer;
             width: 100%;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
+            padding: 0;
+            border: 1px solid $foreground;
+            border-radius: .25rem;
             @media only screen and (min-width: 1000px) {
                 width: calc(33.3% - 10px);
             }
-            .project-name {
+            .project-overlap {
                 left: 50%;
                 top: 50%;
                 right: 0;
                 bottom: 0;
                 transform: translate(-50%, -50%);
                 position: absolute;
-                z-index: 1;
                 color: $foreground;
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                opacity: 0;
+                z-index: 1;
+                h5 {
+                    color: $foreground;
+                }
+                .view-icon {
+                    margin-top: auto;
+                    margin-bottom: auto;
+                    font-size: 40px;
+                    color: $foreground;
+                }
             }
             .project-img {
                 width: 100%;
-                filter: blur(2px) brightness(50%);
+                filter: brightness(50%);
+                border-radius: .25rem;
             }
             &:hover {
+                -webkit-transition: -webkit-transform 200ms ease,background-color 200ms ease,box-shadow 200ms ease;
+                -moz-transition: -moz-transform 200ms ease,background-color 200ms ease,box-shadow 200ms ease;
+                transition: transform 200ms ease,background-color 200ms ease,box-shadow 200ms ease;
+                -webkit-transform: translateY(-1rem);
+                -moz-transform: translateY(-1rem);
+                -ms-transform: translateY(-1rem);
+                -o-transform: translateY(-1rem);
+                transform: translateY(-1rem);
+                outline: 0;
+                box-shadow: 0 8px 15px rgb(255 255 255 / 15%);
+                .project-overlap {
+                    opacity: 1;
+                }
                 .project-img {
-                    filter: brightness(50%);
+                    filter: blur(2px) brightness(50%);
+                }
+            }
+        }
+        .project-modal {
+            position: fixed;
+            background-color: $const;
+            height: 100%;
+            width: 100%;
+            z-index: 5;
+            left: 0;
+            top: 0;
+            padding: 3rem;
+            .vertical-flex {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                min-height: 100%;
+                overflow-y: scroll;
+                .horizontal-flex {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    > section {
+                        background-color: $background;
+                        padding: 1rem;
+                        @media only screen and (min-width: 400px) {
+                            padding: 2rem;
+                        }
+                        border-radius: .5rem;
+                        margin-bottom: 2rem;
+                        width: 100%;
+                        text-align: center;
+                        @media only screen and (min-width: 1000px) {
+                            max-width: 45%;
+                        }
+                        > h3 {
+                            display: flex;
+                            justify-content: space-between;
+                            > a {
+                                color: $regex-keyword;
+                                font-size: inherit;
+                                &:hover {
+                                    color: $regex;
+                                }
+                            }
+                        }
+                        > div.json-container {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            &::before {
+                                display: block;
+                                content: "{";
+                                font-size: 100px;
+                                line-height: 100px;
+                                color: $foreground;
+                            }
+                            &::after {
+                                content: "}";
+                                display: block;
+                                font-size: 100px;
+                                line-height: 100px;
+                                color: $foreground;
+                            }
+                            > ul.json {
+                                text-align: center;
+                                font-size: .6rem;
+                                @media only screen and (min-width: 400px) {
+                                    font-size: .9rem;
+                                }
+                                @media only screen and (min-width: 1150px) {
+                                    font-size: 1rem;
+                                }
+                            }
+                        }
+                        > h3, h4 {
+                            color: $regex-keyword;;
+                        }
+                    }
                 }
             }
         }
